Fixed bug #14847: Bug: Template Analyzer: Line numbers barely readable (Thanks to Andy Grunwald)
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/branches/TYPO3_4-4@8056 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/sysext/t3skin/stylesheets/visual/element_typoscript.css
+++ b/typo3/sysext/t3skin/stylesheets/visual/element_typoscript.css
@@ -57,4 +57,5 @@ pre.ts-hl .ts-error {
 
 pre.ts-hl .ts-linenum {
 	background-color: #eee;
+	color: #212424;
 }
